Finish refactoring kernel thinning + example

--- a/demo/fbp_reconstruction.ipynb
+++ b/demo/fbp_reconstruction.ipynb
@@ -56,7 +56,7 @@
     "X, Y = utilities.generate_pixel_grid(x_max, y_max, grid_size)\n",
     "phantom_eval = phantom.eval_phantom(X, Y, phantom_type)\n",
     "\n",
-    "# Create object\n",
+    "## Create object\n",
     "geometry = 'pbg'\n",
     "r_max = np.sqrt(2)\n",
     "sample_size = 150\n",
