finish KernelInterpolant and demo for thinned interpolant reconstruction

--- a/demo/fbp_reconstruction.ipynb
+++ b/demo/fbp_reconstruction.ipynb
@@ -97,12 +97,12 @@
     "plt.figure(figsize=(12, 6))\n",
     "\n",
     "plt.subplot(1, 2, 1)\n",
-    "plt.imshow(phantom_eval, cmap='gray')\n",
+    "plt.imshow(phantom_eval, cmap='gray', origin='lower')\n",
     "plt.axis('off')\n",
     "plt.title('Original Phantom')\n",
     "\n",
     "plt.subplot(1, 2, 2)\n",
-    "plt.imshow(reconstruction, cmap='gray')\n",
+    "plt.imshow(reconstruction, cmap='gray', origin='lower')\n",
     "plt.axis('off')\n",
     "plt.title(f'FBP Reconstruction - RMSE: {rmse:.4f}')\n",
     "\n",
