--- a/demo/greedy_kernel_reconstruction.ipynb
+++ b/demo/greedy_kernel_reconstruction.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 1,
+   "execution_count": null,
    "id": "59149778",
    "metadata": {},
    "outputs": [],
@@ -13,7 +13,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": null,
    "id": "6630421e",
    "metadata": {},
    "outputs": [],
@@ -26,7 +26,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": null,
    "id": "79db2b3d",
    "metadata": {},
    "outputs": [],
@@ -76,17 +76,11 @@
     "c_newton = None\n",
     "V_newton = None\n",
     "pwr_func_vals = None\n",
-    "res = None"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "id": "2a5f1771",
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "# Init figure of reconstructions"
+    "res = None\n",
+    "\n",
+    "## Init kernel reconstruction\n",
+    "interpolant = kr.KernelInterpolant()\n",
+    "eval_repr = None"
    ]
   },
   {
@@ -94,18 +88,19 @@
    "execution_count": null,
    "id": "3f3083c9",
    "metadata": {},
-   "outputs": [
-    {
-     "name": "stderr",
-     "output_type": "stream",
-     "text": [
-      "beta_greedy: 100%|██████████████████████████████| 500/500 [00:10<00:00, 46.64it/s]\n",
-      "beta_greedy: 100%|██████████████████████████████| 1000/1000 [00:22<00:00, 21.98it/s]\n",
-      "beta_greedy: 100%|██████████████████████████████| 1500/1500 [00:33<00:00, 14.92it/s]\n"
-     ]
-    }
-   ],
+   "outputs": [],
    "source": [
+    "# Init figure of reconstructions\n",
+    "import matplotlib.pyplot as plt\n",
+    "\n",
+    "fig = plt.figure(figsize=(24, 6))\n",
+    "\n",
+    "# plot original phantom\n",
+    "ax = fig.add_subplot(1, steps + 1, 1)\n",
+    "ax.imshow(phantom_eval, cmap='gray', origin='lower')\n",
+    "ax.set_title('Original Phantom')\n",
+    "ax.axis('off')\n",
+    "\n",
     "# Run greedy kernel thinning\n",
     "for i in range(steps):\n",
     "    c_newton, V_newton, pwr_func_vals, res = obj.kernel_thinning(\n",
@@ -114,17 +109,24 @@
     "        res=res\n",
     "    )\n",
     "\n",
-    "    # plot reconstructions"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "id": "32f45332",
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "# Modify plot + show"
+    "    interpolant.fit(\n",
+    "        obj, kernel, basis='standard', c_newton=c_newton, V_newton=V_newton\n",
+    "    )\n",
+    "\n",
+    "    reconstruction, eval_repr = interpolant.predict(\n",
+    "        obj, X, Y, kernel, prev_eval_repr=None\n",
+    "    )\n",
+    "\n",
+    "    reconstruction_error = utilities.reconstruction_error(\n",
+    "        phantom_eval, reconstruction, metric='rmse'\n",
+    "    )\n",
+    "\n",
+    "    ax = fig.add_subplot(1, steps + 1, i + 2)\n",
+    "    ax.imshow(reconstruction, cmap='gray', origin='lower')\n",
+    "    ax.set_title(f'{(i+1)*steps_size} data points - RMSE: {reconstruction_error:.4f}')\n",
+    "    ax.axis('off')\n",
+    "\n",
+    "plt.show()"
    ]
   }
  ],
