Finish KernelRegressor Class and demo notebook

--- a/demo/fbp_reconstruction.ipynb
+++ b/demo/fbp_reconstruction.ipynb
@@ -46,17 +46,17 @@
    "source": [
     "# Setup\n",
     "\n",
-    "## Define phatom\n",
+    "# Define phantom\n",
     "phantom_type = 'smooth_phantom'\n",
     "\n",
-    "## Generate pixel grid\n",
+    "# Generate pixel grid\n",
     "x_max = 1\n",
     "y_max = 1\n",
     "grid_size = [256, 256]\n",
     "X, Y = utilities.generate_pixel_grid(x_max, y_max, grid_size)\n",
     "phantom_eval = phantom.eval_phantom(X, Y, phantom_type)\n",
     "\n",
-    "## Create object\n",
+    "# Create object\n",
     "geometry = 'pbg'\n",
     "r_max = np.sqrt(2)\n",
     "sample_size = 150\n",
@@ -78,8 +78,12 @@
     "spline_type = 'cubic'\n",
     "eval_radius = np.sqrt(2)\n",
     "\n",
-    "reconstruction = obj.fbp_reconstruct(X, Y, filter_type=filter_type,\n",
-    "                                        spline_type=spline_type, eval_radius=eval_radius)\n",
+    "reconstruction = obj.fbp_reconstruct(\n",
+    "    X, Y, \n",
+    "    filter_type=filter_type,\n",
+    "    spline_type=spline_type, \n",
+    "    eval_radius=eval_radius\n",
+    ")\n",
     "\n",
     "rmse = utilities.reconstruction_error(phantom_eval, reconstruction)"
    ]
@@ -96,11 +100,13 @@
     "\n",
     "plt.figure(figsize=(12, 6))\n",
     "\n",
+    "# Original phantom\n",
     "plt.subplot(1, 2, 1)\n",
     "plt.imshow(phantom_eval, cmap='gray', origin='lower')\n",
     "plt.axis('off')\n",
     "plt.title('Original Phantom')\n",
     "\n",
+    "# FBP reconstruction\n",
     "plt.subplot(1, 2, 2)\n",
     "plt.imshow(reconstruction, cmap='gray', origin='lower')\n",
     "plt.axis('off')\n",
