--- a/demo/greedy_kernel_reconstruction.ipynb
+++ b/demo/greedy_kernel_reconstruction.ipynb
@@ -48,17 +48,17 @@
    "source": [
     "# Setup\n",
     "\n",
-    "## Define phatom\n",
+    "# Define phantom\n",
     "phantom_type = 'shepp_logan'\n",
     "\n",
-    "## Generate pixel grid\n",
+    "# Generate pixel grid\n",
     "x_max = 1\n",
     "y_max = 1\n",
     "grid_size = [256, 256]\n",
     "X, Y = utilities.generate_pixel_grid(x_max, y_max, grid_size)\n",
     "phantom_eval = phantom.eval_phantom(X, Y, phantom_type)\n",
     "\n",
-    "## Create object\n",
+    "# Create object\n",
     "geometry = 'random'\n",
     "r_max = np.sqrt(2)\n",
     "sample_size = 10000\n",
@@ -67,7 +67,7 @@
     "Radon = phantom.eval_phantom_radon(r, a, phantom_type)\n",
     "obj = Object(r, a, Radon)\n",
     "\n",
-    "## Parameters for greedy selection\n",
+    "# Parameters for greedy selection\n",
     "kernel = WeightedGaussian()\n",
     "greedy_method = 'beta_greedy'\n",
     "steps = 3\n",
@@ -78,7 +78,7 @@
     "pwr_func_vals = None\n",
     "res = None\n",
     "\n",
-    "## Init kernel reconstruction\n",
+    "# Initialize kernel reconstruction\n",
     "interpolant = kr.KernelInterpolant()\n",
     "eval_repr = None"
    ]
@@ -90,12 +90,12 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "# Init figure of reconstructions\n",
+    "# Initialize figure of reconstructions\n",
     "import matplotlib.pyplot as plt\n",
     "\n",
     "fig = plt.figure(figsize=(24, 6))\n",
     "\n",
-    "# plot original phantom\n",
+    "# Plot original phantom\n",
     "ax = fig.add_subplot(1, steps + 1, 1)\n",
     "ax.imshow(phantom_eval, cmap='gray', origin='lower')\n",
     "ax.set_title('Original Phantom')\n",
@@ -103,27 +103,35 @@
     "\n",
     "# Run greedy kernel thinning\n",
     "for i in range(steps):\n",
+    "    # Perform kernel thinning\n",
     "    c_newton, V_newton, pwr_func_vals, res = obj.kernel_thinning(\n",
     "        kernel, greedy_method, max_iter=steps_size, beta=beta,\n",
-    "        c_newton=c_newton, V_newton=V_newton, pwr_func_vals=pwr_func_vals,\n",
-    "        res=res\n",
+    "        c_newton=c_newton, V_newton=V_newton, \n",
+    "        pwr_func_vals=pwr_func_vals, res=res\n",
     "    )\n",
     "\n",
+    "    # Fit interpolant\n",
     "    interpolant.fit(\n",
-    "        obj, kernel, basis='standard', c_newton=c_newton, V_newton=V_newton\n",
+    "        obj, kernel, basis='standard', \n",
+    "        c_newton=c_newton, V_newton=V_newton\n",
     "    )\n",
     "\n",
+    "    # Predict reconstruction\n",
     "    reconstruction, eval_repr = interpolant.predict(\n",
     "        obj, X, Y, kernel, prev_eval_repr=None\n",
     "    )\n",
     "\n",
+    "    # Calculate reconstruction error\n",
     "    reconstruction_error = utilities.reconstruction_error(\n",
     "        phantom_eval, reconstruction, metric='rmse'\n",
     "    )\n",
     "\n",
+    "    # Plot reconstruction\n",
     "    ax = fig.add_subplot(1, steps + 1, i + 2)\n",
     "    ax.imshow(reconstruction, cmap='gray', origin='lower')\n",
-    "    ax.set_title(f'{(i+1)*steps_size} data points - RMSE: {reconstruction_error:.4f}')\n",
+    "    ax.set_title(\n",
+    "        f'{(i+1)*steps_size} data points - RMSE: {reconstruction_error:.4f}'\n",
+    "    )\n",
     "    ax.axis('off')\n",
     "\n",
     "plt.show()"
