--- a/demo/regularized_kernel_reconstruction.ipynb
+++ b/demo/regularized_kernel_reconstruction.ipynb
@@ -1,8 +1,189 @@
 {
- "cells": [],
+ "cells": [
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "fb122ab0",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "# This command can be used to install the required packages for this project.\n",
+    "# !pip install -r ../requirements.txt"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "933c5d75",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "# Add the parent directory of 'KernelCT' to sys.path\n",
+    "\n",
+    "import sys\n",
+    "sys.path.append('..')"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "bb12bbb9",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "# Import necessary packages/modules\n",
+    "import numpy as np\n",
+    "from KernelCT.object import Object\n",
+    "from KernelCT import utilities, phantom\n",
+    "from KernelCT.kernel_reconstruction import KernelRegressor, KernelInterpolant\n",
+    "from KernelCT.weighted_kernels import WeightedGaussian"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "b0e6c03b",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "# Setup\n",
+    "\n",
+    "# Define phantom\n",
+    "phantom_type = 'shepp_logan'\n",
+    "\n",
+    "# Generate pixel grid\n",
+    "x_max = 1\n",
+    "y_max = 1\n",
+    "grid_size = [256, 256]\n",
+    "X, Y = utilities.generate_pixel_grid(x_max, y_max, grid_size)\n",
+    "phantom_eval = phantom.eval_phantom(X, Y, phantom_type)\n",
+    "\n",
+    "# Create object\n",
+    "geometry = 'random'\n",
+    "r_max = np.sqrt(2)\n",
+    "sample_size = 10000\n",
+    "\n",
+    "r, a = utilities.generate_lineset(geometry, r_max, sample_size)\n",
+    "Radon = phantom.eval_phantom_radon(r, a, phantom_type)\n",
+    "obj = Object(r, a, Radon)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "4752e945",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "# Run greedy kernel thinning\n",
+    "kernel = WeightedGaussian()\n",
+    "greedy_method = 'beta_greedy'\n",
+    "max_iter = 1500\n",
+    "beta = 0.5\n",
+    "c_newton = None\n",
+    "V_newton = None\n",
+    "pwr_func_vals = None\n",
+    "res = None\n",
+    "\n",
+    "c_newton, V_newton, pwr_func_vals, res = obj.kernel_thinning(\n",
+    "    kernel,\n",
+    "    greedy_method,\n",
+    "    max_iter=max_iter,\n",
+    "    beta=beta,\n",
+    "    c_newton=c_newton,\n",
+    "    V_newton=V_newton,\n",
+    "    pwr_func_vals=pwr_func_vals,\n",
+    "    res=res\n",
+    ")"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "bce6f66c",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "# Compare different regularization methods\n",
+    "\n",
+    "# Initialize plot\n",
+    "import matplotlib.pyplot as plt\n",
+    "fig = plt.figure(figsize=(24, 6))\n",
+    "\n",
+    "# Plot original phantom\n",
+    "ax = fig.add_subplot(1, 4, 1)\n",
+    "ax.imshow(phantom_eval, cmap='gray', origin='lower')\n",
+    "ax.set_title('Original Phantom')\n",
+    "ax.axis('off')\n",
+    "\n",
+    "# Compute interpolant\n",
+    "interpolant = KernelInterpolant()\n",
+    "eval_repr = None\n",
+    "interpolant.fit(\n",
+    "    obj, kernel, basis='newton', \n",
+    "    c_newton=c_newton, V_newton=V_newton\n",
+    ")\n",
+    "reconstruction, eval_repr = interpolant.predict(\n",
+    "    obj, X, Y, kernel, prev_eval_repr=None\n",
+    ")\n",
+    "\n",
+    "ax = fig.add_subplot(1, 4, 2)\n",
+    "ax.imshow(reconstruction, cmap='gray', origin='lower')\n",
+    "ax.set_title('Interpolation')\n",
+    "ax.axis('off')\n",
+    "\n",
+    "# Initialize kernel regressor\n",
+    "regressor = KernelRegressor()\n",
+    "\n",
+    "# Regularization with norm-based method\n",
+    "regressor.fit(\n",
+    "    obj, kernel, regularization='norm',\n",
+    "    gamma=1e-6, V_newton=V_newton\n",
+    ")\n",
+    "reconstruction, eval_repr = regressor.predict(\n",
+    "    obj, X, Y, kernel, eval_repr\n",
+    ")\n",
+    "\n",
+    "ax = fig.add_subplot(1, 4, 3)\n",
+    "ax.imshow(reconstruction, cmap='gray', origin='lower')\n",
+    "ax.set_title('Norm regularization')\n",
+    "ax.axis('off')\n",
+    "\n",
+    "# Regularization with TV-based method\n",
+    "regressor.fit(\n",
+    "    obj, kernel, regularization='tv',\n",
+    "    gamma=1e-10, X_diff=X, Y_diff=Y\n",
+    ")\n",
+    "reconstruction, eval_repr = regressor.predict(\n",
+    "    obj, X, Y, kernel, eval_repr\n",
+    ")\n",
+    "\n",
+    "ax = fig.add_subplot(1, 4, 4)\n",
+    "ax.imshow(reconstruction, cmap='gray', origin='lower')\n",
+    "ax.set_title('TV regularization')\n",
+    "ax.axis('off')\n",
+    "\n",
+    "plt.show()"
+   ]
+  }
+ ],
  "metadata": {
+  "kernelspec": {
+   "display_name": ".venv",
+   "language": "python",
+   "name": "python3"
+  },
   "language_info": {
-   "name": "python"
+   "codemirror_mode": {
+    "name": "ipython",
+    "version": 3
+   },
+   "file_extension": ".py",
+   "mimetype": "text/x-python",
+   "name": "python",
+   "nbconvert_exporter": "python",
+   "pygments_lexer": "ipython3",
+   "version": "3.13.5"
   }
  },
  "nbformat": 4,
